-Added shadow support of sqrt/sin/cos/tg/sqr (need to configure order) -Added animation -Boosted performance -Added offsets to show range correctly

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.animated {
+  animation: dash 1s forwards;
+}
+
+@keyframes dash {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
