--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: flex-end;
     margin-top: 20px;
+    margin-bottom: 20px;
 
     &Group {
       margin: 0 20px;
